# admittance_controller

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: ur10e_parameters.yaml  ur10e_topic_names.yaml
debug/: input_trajectory_debug.csv  s_des_debug.csv  s_dot_des_debug.csv  scaled_trajectory_debug.csv
debug/Test Spline/: spline1d_joint1_debug.csv  spline1d_joint2_debug.csv  spline1d_joint3_debug.csv  spline1d_joint6_debug.csv
debug/Test Spline/s € [0,1]/: spline1d_joint4_debug.csv  spline1d_joint5_debug.csv
debug/Test Spline/s € [0,T]/: spline1d_joint1_debug.csv  spline1d_joint2_debug.csv  spline1d_joint3_debug.csv  spline1d_joint4_debug.csv  spline1d_joint5_debug.csv  spline1d_joint6_debug.csv
include/admittance_controller/: admittance_controller.h
launch/: ur10e_admittance_controller.launch  ur10e_hw_admittance_controller.launch  ur10e_robot_model.launch  ur10e_simulation_admittance_controller.launch
lib/spline_interpolation/: spline.h
msg/: joint_trajectory.msg  parameter_msg.msg
src/admittance_controller/: admittance_controller.cpp  admittance_controller.cpp.bak  admittance_controller_Node.cpp
srv/: parameter_srv.srv
